[package]
name = "katgpt-spectral"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Spectral quantization substrate — calibrated eigenbasis KV cache compression, Lloyd-Max / water-fill bit allocation, outlier-aware guard. Shared by katgpt-kv (ShardKV, KVarN) and non-KV consumers (funcattn_compose, chiaroscuro, benchmark). Spun out of katgpt-rs/src/spectralquant/ (Issue 015 Phase 2)."
repository = "https://github.com/katopz/katgpt-rs"
keywords = ["quantization", "spectral", "kv-cache", "lloyd-max", "modelless"]
categories = ["algorithms", "science"]
publish = false  # only katgpt-core ships to crates.io

[dependencies]
# SIMD kernels (simd_scale_inplace, simd_sum_sq) + types re-export.
katgpt-core = { path = "../katgpt-core" }
# Shared types (no KV-coupling; OutlierGuardConfig is re-exported from here
# via the local outlier_guard module — it lives with the code that consumes it).
katgpt-types = { path = "../katgpt-types" }
# TransformerWeights type referenced by outlier_guard.
katgpt-transformer = { path = "../katgpt-transformer" }
# SpectralKVCache parallel dequant kernels.
rayon = "1.10"
# f16 KV cache storage.
half = "2"
# Zero-copy Pod layout for calibration structs.
bytemuck = "1"
# serde impls for OutlierGuardConfig + calibration structs.
serde = { version = "1", features = ["derive"] }
# Diagnostics in outlier_guard / spectral.
log = "0.4"

# Optional: snapshot hashing in manifold_power_iter_router + off_principal
# (Phase 4 absorptions). Gated by the `manifold_power_iter_router` /
# `off_principal_retrieval` features.
blake3 = { version = "1", optional = true }

# RNG for peira's synthetic_cca_sample public API (Phase 4 absorption).
fastrand = "2"

# Uuid::now_v7() for EigenbasisProvenance.window_id (Phase 12 absorption —
# hla_eigenbasis.rs). Optional, enabled by `hla_eigenbasis_recovery`.
uuid = { version = "1", features = ["v7"], optional = true }

[features]
# All flags are empty tracking gates mirroring the historical katgpt-rs
# feature surface. The root crate forwards them via
# `feature = ["katgpt-spectral/feature"]` so existing `#[cfg(feature = "...")]`
# branches inside the spectral code compile unchanged.
default = []

# Core spectral quantization flag (historical default-on at root).
spectral_quant = []

# Outlier-aware quantization guard (Plan 224). Gates outlier_guard.rs.
outlier_guard = []

# Cross-check with stiff_anomaly eigenvalue distribution.
# (Requires the consumer crate to also enable stiff_anomaly for the
# StiffSoftCrossCheck impl to mean anything — kept here as tracking flag.)
stiff_anomaly = []

# MaxSim late-interaction forward kernel.
maxsim = []

# Dual-gram PCA eigenbasis calibration.
dual_gram_pca = []

# TurboQuant random rotation export gate.
turboquant = []

# ── Phase 4 (Proposal 003) absorptions. Each forwards the substrate dep it
# needs (newton_schulz lives in katgpt-core; blake3 is an optional crate dep).

# Gauge-invariant adapter composition (Plan 270, Research 238) — LoRA-Muon
# distillation. Needs newton_schulz for the PSD inverse-sqrt path.
gauge_invariant = ["katgpt-core/newton_schulz"]

# Manifold Power Iteration MoE Router (Plan 279, Research 246). Needs blake3
# for snapshot hashing.
manifold_power_iter_router = ["blake3"]

# Off-Principal Task Vector Retrieval (Plan 264 Phase 2, Research 231).
# Needs newton_schulz for the principal-direction recovery and blake3 for the
# source-weight hash. Also enables the local `newton_schulz` feature so the
# internal `#[cfg(feature = "newton_schulz")]` gate on `OffPrincipalIndex::new`
# resolves.
off_principal_retrieval = ["katgpt-core/newton_schulz", "blake3", "newton_schulz"]

# Spectral Budget Router (Plan 253, Research 222) — layer-adaptive NS depth.
# Tests exercise katgpt_core::newton_schulz directly and are gated by the
# local `newton_schulz` feature.
spectral_budget = ["katgpt-core/newton_schulz", "newton_schulz"]

# Orthogonal Procrustes cross-frame alignment (Issue 001).
orthogonal_procrustes = []

# River-valley diagnostic metrics (Plan 152, Research 114). Tracking flag
# for the internal `#[cfg(feature = "river_valley")]` gates on the public
# diagnostic functions; the module itself is always present.
river_valley = []

# Newton-Schulz orthogonalization passthrough. The substrate lives in
# katgpt-core; this alias lets the internal `#[cfg(feature = "newton_schulz")]`
# gates in `off_principal.rs` and `spectral_budget.rs` resolve. Always implied
# by `gauge_invariant`, `off_principal_retrieval`, and `spectral_budget`.
newton_schulz = ["katgpt-core/newton_schulz"]

# PEIRA modelless distillation (Plan 153, Research 115). Forwards the
# peira_distill flag on katgpt-core where the PeiraConfig/PeiraCovariance
# types live.
peira_distill = ["katgpt-core/peira_distill"]

# HLA Windowed Eigenbasis Recovery (Issue 001). Per-NPC eigenbasis recovery
# from a recent window of that NPC's own HLA activations — power iteration on
# D×D Gram, modelless. Phase 12 (2026-07-04): module moved here from
# katgpt-rs/src/hla_eigenbasis.rs; the historical `katgpt_rs::hla_eigenbasis`
# path is preserved via the root re-export.
hla_eigenbasis_recovery = ["uuid", "blake3"]

# Spectral Rewiring — weight delta purification via base SVD projection
# (Plan 423, Research 406 — Zhang et al. arXiv:2607.03065). Projects ΔW onto
# W₀'s top-rank SVD subspace, extracting the compact rewiring matrix M = U_rᵀΔWV_r
# and the purified on-manifold delta ΔW* = U_r M V_rᵀ. The on-principal complement
# of `off_principal_retrieval` (Plan 264). Needs katgpt-core/subspace_phase_gate
# for thin_svd_into + SvdResultScratch + SvdScratch. Opt-in until the Plan 423
# GOAT gate passes (G1 spectral concentration at NPC scale is the make-or-break).
spectral_rewire = ["katgpt-core/subspace_phase_gate"]

# Plan 423 Phase 3 — Spectral Rewiring GOAT gate bench (G1–G6).
# std::time::Instant + harness=false + self-contained CountingAllocator
# (criterion is not a katgpt-rs dev-dep; matches the repo bench convention).
[[bench]]
name = "bench_423_spectral_rewire_goat"
path = "benches/bench_423_spectral_rewire_goat.rs"
required-features = ["spectral_rewire"]
harness = false
