[package]
name = "katgpt-speculative"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Speculative decoding + DDTree substrate shared by katgpt-rs and riir-engine (Issue 013)"
repository = "https://github.com/katopz/katgpt-rs"
keywords = ["speculative", "decoding", "ddtree", "inference", "modelless"]
categories = ["algorithms", "science"]
publish = false  # only katgpt-core ships to crates.io

[dependencies]
# Types + traits + speculative type substrate (TreeNode, DraftResult, ConstraintPruner, etc.)
katgpt-core = { path = "../katgpt-core" }
# Config, Rng, InferenceResult
katgpt-types = { path = "../katgpt-types" }
# Parallel BFS expansion
rayon = "1.10"

[features]
# Forward sr2am_configurator to katgpt-types so `build_inference_result` can
# populate InferenceResult.planning_decision / plan_horizon_used (Plan 112).
# Default-off mirrors katgpt-types / katgpt-core / katgpt-rs.
sr2am_configurator = ["katgpt-types/sr2am_configurator"]

# Lodestar completion-distance pruning (Plan 207). Gates
# `build_dd_tree_lodestar` + `LodestarConfig` in dd_tree.rs. The pruner
# (`LodestarPruner`) and automaton live in katgpt-pruners; the tree builder
# lives here because it composes `TreeBuilder` internals. katgpt-pruners
# forwards this feature so callers enabling `katgpt-pruners/lodestar` get
# both halves.
lodestar = []

# PPoT core primitives (types, knowledge, entropy, rank). The `resample`
# orchestrator stays in katgpt-rs root (12 root-only refs); this crate owns the
# four zero-root-coupling leaves (Issue 003). Forwarded from root `ppot`.
ppot = []

[dev-dependencies]
katgpt-transformer = { path = "../katgpt-transformer" }
fastrand = "2"  # correlation_budget tests (Issue 003 move from root, which has fastrand as a dep)
