[package]
name = "katgpt-speculative"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Speculative decoding + DDTree substrate shared by katgpt-rs and riir-engine (Issue 013)"
repository = "https://github.com/katopz/katgpt-rs"
keywords = ["speculative", "decoding", "ddtree", "inference", "modelless"]
categories = ["algorithms", "science"]
publish = false  # only katgpt-core ships to crates.io

[dependencies]
# Types + traits + speculative type substrate (TreeNode, DraftResult, ConstraintPruner, etc.)
katgpt-core = { path = "../katgpt-core" }
# Config, Rng, InferenceResult, RetrievalHeadRole, RtTurboConfig
katgpt-types = { path = "../katgpt-types" }
# Parallel BFS expansion
rayon = "1.10"
# serde for rt_turbo calibration/projection serialization (Plan 126).
serde = { version = "1", features = ["derive"], optional = true }
# postcard for rt_turbo binary calibration roundtrip (Plan 126).
postcard = { version = "1", features = ["alloc"], optional = true }
# blake3 for spechop segment_match content-addressed segment hashing.
blake3 = { version = "1", optional = true }
# katgpt-kv for cache_prune (RollingHash, SummedAreaTable) consumed by spechop
# segment_match + rt_turbo sat_retrieval. Optional — only needed when those
# modules are enabled (Proposal 003 Phase 6).
katgpt-kv = { path = "../katgpt-kv", default-features = false, optional = true }
# f16 KV cache storage for chain_fold's chain_folder (Phase 12 T4.5 move).
half = { version = "2", optional = true }
# RNG for fold_bandit (Phase 12 T4.5 move).
fastrand = { version = "2", optional = true }

[features]
# Forward sr2am_configurator to katgpt-types so `build_inference_result` can
# populate InferenceResult.planning_decision / plan_horizon_used (Plan 112).
# Default-off mirrors katgpt-types / katgpt-core / katgpt-rs.
sr2am_configurator = ["katgpt-types/sr2am_configurator"]

# Lodestar completion-distance pruning (Plan 207). Gates
# `build_dd_tree_lodestar` + `LodestarConfig` in dd_tree.rs. The pruner
# (`LodestarPruner`) and automaton live in katgpt-pruners; the tree builder
# lives here because it composes `TreeBuilder` internals. katgpt-pruners
# forwards this feature so callers enabling `katgpt-pruners/lodestar` get
# both halves.
lodestar = []

# PPoT core primitives (types, knowledge, entropy, rank). The `resample`
# orchestrator stays in katgpt-rs root (12 root-only refs); this crate owns the
# four zero-root-coupling leaves (Issue 003). Forwarded from root `ppot`.
ppot = []

# ── Proposal 003 Phase 6 absorptions (2026-07-04) ──────────────────────────
# Each feature gates one module moved from katgpt-rs/src/. Root forwards these
# so historical `katgpt_rs::<module>::*` paths keep resolving via re-export.

# ILC Iterative Latent Clustering — synonym-aware DDTree pruning (Research 136).
# Moved from src/distill/ilc.rs. No extra deps (uses crate-local dd_tree +
# re-exported ScreeningPruner/TreeNode + katgpt_types::Config).
ilc_distill = []

# SpecHop continuous multi-hop speculation pipeline (Plan 131, Research 091).
# Moved from src/spechop/. Pulls katgpt-kv (cache_prune::RollingHash for
# segment_match) and serde (IndexedSegment serialization).
spechop = ["dep:katgpt-kv", "cache_prune", "dep:serde", "dep:blake3", "bandit"]

# bandit alias — gates BanditSpeculator in spechop (originally gated by the
# root `bandit` feature which pulls katgpt-pruners/bandit). In katgpt-speculative
# BanditSpeculator is generic over ScreeningPruner (no katgpt-pruners dep), so
# this is a pure on/off switch. Always enabled by spechop.
bandit = []

# RecFM recursive cross-scale consistency — DDTree + LT2 + SpecHop (Plan 168,
# Research 150). Gates CrossHopConfig + observation_velocity in spechop/speculator.
# Mirrors the root `recfm = []` feature.
recfm = []

# Adaptive Causal Calibration (Proposal 004) — opt-in convenience wrapper around
# calibrate_from_adaptive_causal in rt_turbo/calibration. Forwards to
# katgpt-core/adaptive_causal_calibration which provides suspect_indices
# (chained: enables katgpt-core/causal_head_importance transitively).
adaptive_causal_calibration = ["katgpt-core/adaptive_causal_calibration"]

# cache_prune forward — gates segment_match (spechop) + sat_retrieval (rt_turbo).
# Forwards to katgpt-kv so `use katgpt_kv::cache_prune::*` resolves.
cache_prune = ["dep:katgpt-kv", "katgpt-kv/cache_prune"]

# RTPurbo retrieval-head sparse decode (Plan 126, Research 86). Moved from
# src/rt_turbo/. Pulls katgpt-kv (cache_prune::SummedAreaTable for
# sat_retrieval) + serde + postcard for calibration binary roundtrip.
rt_turbo = ["cache_prune", "dep:serde", "dep:postcard"]

# PASD boundary-aware draft scoring (Plan 227 Phase 4). Moved from
# src/precision_aware_draft.rs. Zero external deps.
precision_aware_draft = []

# Speculative Reconciliation Engine — verify offline trajectories against
# plausibility manifolds (Plan 177). Moved from src/spec_reconciliation/.
# No extra deps beyond katgpt-types/katgpt-core (already mandatory).
spec_reconciliation = []

thinking_prune = []  # Gates the `build_hop_dd_tree_with_schedule` path in spechop/hop_tree.rs
# (Plan 171 FrozenBaseGuard semantics). No deps — the schedule type is defined
# locally in katgpt-speculative to avoid a katgpt-pruners cycle (katgpt-pruners
# already depends on katgpt-speculative for sr2am_configurator forwarding).

# ── Phase 12 T4.5 (2026-07-04): modules moved from katgpt-rs/src/. ──
# Progressive MCGS — self-contained graph search (Plan 148). Zero non-std deps.
progressive_mcgs = []
# Chain Fold — step-boundary-aware context folding (Plan 195). Needs katgpt-kv
# for still_kv types (BetaBias, KVChunk, CompactionStrategy) used in chain_folder.
chain_fold = ["dep:katgpt-kv", "katgpt-kv/still_kv", "still_kv", "dep:half", "dep:fastrand"]
# still_kv tracking flag — gates the chain_folder still_kv code path. Implied by chain_fold.
still_kv = []
# Bake precision sub-feature for fold's attention_importance path.
bake_precision = []

[dev-dependencies]
katgpt-transformer = { path = "../katgpt-transformer" }
fastrand = "2"  # correlation_budget tests (Issue 003 move from root, which has fastrand as a dep)
serde_json = "1"  # segment_match IndexedSegment JSON roundtrip tests
tempfile = "3"  # rt_turbo calibration save/load roundtrip tests
